crates/fv-requirements-txt/src/snapshots/uv_requirements_txt__test__parse-unix-semicolon.txt.snap
---
source: crates/fv-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxtFileError {
    file: "<REQUIREMENTS_DIR>/semicolon.txt",
    error: Pep508 {
        source: Pep508Error {
            message: UrlError(
                MissingExtensionPath(
                    "./editable;python_version >= \"3.9\" and os_name == \"posix\"",
                    Dist,
                ),
            ),
            start: 0,
            len: 57,
            input: "./editable;python_version >= \"3.9\" and os_name == \"posix\"",
        },
        start: 50,
        end: 107,
    },
}
